--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,11 +6,22 @@ on:
     branches: [master]
 jobs:
   build: 
+    env: 
+      MONGO_URL: mongodb://localhost/nasa
+      CI: true
+      strategy:
+      matrix:
+       node-version: [18.x, 20.x]
+       mongodb-version: ['4.2','4.4']
     runs-on: ubuntu-latest
      -uses: actions/checkout@v2
      -name: Use Node Js version 16
      -uses: actions/setup-node@v2
      with: 
-       node-version: '20'
+       node-version: ${{ matrix.node-version }}
+     -name: use Mongo DB from Github Actions
+      uses: supercharge/mongodb-github-actions@1.6.0
      -run: npm install
      -run: npm run build --prefix client
+     -run: npm test
+
