--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,27 +1,37 @@
 name: NASA Project CI
+
 on:
   push:
     branches: [master]
   pull_request: 
     branches: [master]
+
 jobs:
   build: 
     env: 
       MONGO_URL: mongodb://localhost/nasa
       CI: true
-      strategy:
-      matrix:
-       node-version: [18.x, 20.x]
-       mongodb-version: ['4.2','4.4']
-    runs-on: ubuntu-latest
-     -uses: actions/checkout@v2
-     -name: Use Node Js version 16
-     -uses: actions/setup-node@v2
-     with: 
-       node-version: ${{ matrix.node-version }}
-     -name: use Mongo DB from Github Actions
-      uses: supercharge/mongodb-github-actions@1.6.0
-     -run: npm install
-     -run: npm run build --prefix client
-     -run: npm test
 
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
+        mongodb-version: ['4.2','4.4']
+
+    runs-on: ubuntu-latest
+
+    steps:
+     - uses: actions/checkout@v2
+
+     - name: Use Node.js version ${{ matrix.node-version }}
+       uses: actions/setup-node@v2
+       with: 
+         node-version: ${{ matrix.node-version }}
+
+     - name: Use MongoDB from GitHub Actions
+       uses: supercharge/mongodb-github-actions@1.6.0
+       with:
+         mongodb-version: ${{ matrix.mongodb-version }}
+
+     - run: npm install
+     - run: npm run build --prefix client
+     - run: npm test
